シリアルの接続処理を追加

--- a/Cliant/Web/index.html
+++ b/Cliant/Web/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <title>オリジナルSMU Webクライアント</title>
 </head>
 <body>
-    
+    <button type="button" id="connect_btn">接続</button>
+    <label>ボーレート : <input type="text" id="baudrate" size="40" value="115200"></label>
+
+    <script src="script.js"></script>
 </body>
 </html>
