--- a/Cliant/Web/index.html
+++ b/Cliant/Web/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <button type="button" id="connect_btn">接続</button>
-    <label>ボーレート : <input type="text" id="baudrate" size="40" value="115200"></label>
+    <label>ボーレート:<input type="text" id="baudrate" size="5" value="115200"></label>
+    <div id="serial_console">
+    </div>
+    <button type="button" id="send_btn">送信</button>
+    <input type="text" id="send_text" size="40"></label>
 
     <script src="script.js"></script>
 </body>
