シリアルの書き込み機能を追加

--- a/Cliant/Web/index.html
+++ b/Cliant/Web/index.html
@@ -11,7 +11,7 @@
     <label>ボーレート:<input type="text" id="baudrate" size="5" value="115200"></label>
     <div id="serial_console">
     </div>
-    <button type="button" id="send_btn">送信</button>
+    <button type="button" id="send_btn" disabled>送信</button>
     <input type="text" id="send_text" size="40"></label>
 
     <script src="script.js"></script>
