クライアントとマイコンにEISを追加

--- a/Cliant/Web/index.html
+++ b/Cliant/Web/index.html
@@ -19,6 +19,7 @@
         <label id="B_vol_label">電圧(V):<input type="text" id="B_vol" size="1" value="0"></label>
         <button type="button" id="IV_btn" disabled>IVカーブ計測</button>
         <label id="IV_vol_label">最大電圧(V):<input type="text" id="IV_vol" size="1" value="1"></label>
+        <button type="button" id="EIS_btn" disabled>EIS計測</button>
         <button type="button" id="csv_btn" disabled>CSVファイル出力</button>
         <label id="csv_name_label">ファイル名:<input type="text" id="csv_name" value="data1.csv"></label>
         <button type="button" id="cal_btn" disabled>校正(ベース補正)</button>
