EISの連続実行、colabでの自動解析に対応

--- a/Cliant/Web/index.html
+++ b/Cliant/Web/index.html
@@ -44,9 +44,10 @@
                     <button type="button" id="EIS_btn" class="action-button" disabled>EIS</button>
                     <div class="inputs_list">
                         <div><label>振幅(mV):<input type="text" id="EIS_amp" value="20"></label></div>
-                        <div><label>周波数(Hz):<input type="text" id="EIS_input_freq" value="12.5"></label></div>
                         <div><label>オフセット電圧(mV):<input type="text" id="EIS_offset_vol" value="60"></label></div>
-                        <div><label>ｻﾝﾌﾟﾘﾝｸﾞ周波数(kHz):<input type="text" id="EIS_sampling_freq" value="100"></label></div>
+                        <div><label>最低周波数(Hz):<input type="text" id="EIS_input_freq" value="1"></label></div>
+                        <div><label>周波数倍率:<input type="text" id="EIS_input_freq_amp" value="10"></label></div>
+                        <div><label>測定回数:<input type="text" id="EIS_times" value="3"></label></div>
                         </div>
                     </div>
                 <hr>
